ve-802 fix page jumping

--- a/app/assets/styles/ve/layout/_ve-footer.scss
+++ b/app/assets/styles/ve/layout/_ve-footer.scss
@@ -11,7 +11,7 @@ ve-footer {
     text-align: center;
     z-index: -10;
     cursor: default;
-    bottom: -12px;
+    bottom: 0px;
     padding-top: 1px;
   }
 }
